--- a/wiki/PRIDEInspector.wiki
+++ b/wiki/PRIDEInspector.wiki
@@ -1,14 +1,93 @@
-#summary One-sentence summary of this page.
+#summary *PRIDE Inspector* is a desktop application to visualize and perform first quality assessment on Mass Spectrometry data.
 #sidebar TableOfContents
 
-= Introduction =
+It is completely open source and the key features include:
+  * Fast loading of *mzML* and *PRIDE XML* files.
+  * Direct access to all PRIDE public database experiments.
+  * Different views on spectra, chromatogram, protein, peptides and metadata.
+  * Visualization for all spectra and chromatograms, including automatic MS2 fragment ion annotations.
+  * Possibility to perform a quality assessment of the data using a statistical view with different charts.
+  * User-friendly download facility for private PRIDE experiments.
+  * A host of programmable open source API/libraries (PRIDE-JAXB, PRIDE-mzGraph-browser, PRIDE-Chart).
 
-Add your content here.
+You can learn more about *PRIDE Inspector* from the sections below:
+ * [#News News]
+ * [#Supported_Data_Formats  Supported Data Formats]
+ * [#Download_and_Installation Download and Installation]
+  * [#Installation_Requirements Installation Requirements]
+  * [#Download Download]
+  * [#Troubleshooting Troubleshooting]
+ * [#Support Support]
+ * [#Source_Code Source Code]
+ * [#Screenshots Screenshots]
+----
 
+===News===
 
-= Details =
+*_October 18. 2010:_ [http://code.google.com/p/pride-inspector/downloads/list PRIDE Inspector] is now available:*
+ * This is the first beta release for external testing.
 
-Add your content here.  Format your content with:
-  * Text in *bold* or _italic_
-  * Headings, paragraphs, and lists
-  * Automatic links to other wiki pages
+[#PRIDE_Inspector Go to top of page]
+
+----
+
+===Supported Data Formats===
+PRIDE Inpsector can load mass spectrometery dataset in either *mzML* or *PRIDE XML* format. We do have plans to support additional formats in the near future.
+
+[#PRIDE_Inspector Go to top of page]
+
+----
+
+===Download and Installation===
+
+====Installation Requirements====
+  * *Java*: *PRIDE Inspector* requires Java JRE 1.6(or above), which you can download for free [http://java.sun.com/javase/downloads/index.jsp here]. (Note: most computers should have Java installed already).
+  * *Operating System*: The current verion has been tested on Windows 7, Windows Vista, Linux and Max OS X, it should also work on other platforms. If you come across any problems on your platform, please let us know.
+  * *Memory*: MS dataset can be very large sometimes, in order to get good performence from PRIDE Inspector, we recommend you to have 1G of free memory.  
+
+[#PRIDE_Inspector Go to top of page]
+
+----
+
+====Download====
+You can get the latest *PRIDE Inspector* from our [http://code.google.com/p/pride-inspector/downloads/list Download Section], and download `pride-inspector-X.Y.zip` (where X and Y represent the version of the software). Unzipping the file, creates the following directory structure:
+{{{
+  pride-inspector-X.Y
+     pride-inspector-X.Y.jar
+     log
+     lib
+     examples
+     config
+}}}
+To start the software, simply double-click the file named `pride-inspector-X.Y.jar`.
+If this fails, try to download and install Java 1.5 or above, as explained in the previous section. (The program can also be started from the command line using the following command: `java -jar pride-inspector-X.Y.jar`.) 
+
+The zip file contains also an `examples` folder with 2 sample files: one in mzML format (`mzml-example.mzML`) and the other in PRIDE xml format (`pride-example.xml`) so you can upload them in pride inspector and try the application. There is and additional folder, `config`, that contains a file called `config.props` where you can modify the amount of memory assigned to your application (only change if you are trying to view files and is causing the software crash because of a "Out of memory..." exception). The additional 2 directories, `lib` and `log`, contain all the java libraries necessary for the application to run and some debugging information if the application crashes.
+
+[#PRIDE_Inspector Go to top of page]
+
+----
+
+====Troubleshooting====
+  # *Memory Issue*: Although PRIDE Inspector is design to handle large datasets with small memory footprint, it can still run out of memory if many files or public experiments are opened at the same time. If you have seen such a warning message in a popup window, you should try to increase the memory allocation for the program.This can be done by editing the `config.props` file, this file is located in the `config` folder of the installation directory. In the file, change the `pride.inspector.max.memory=1024` to a higher number, for instance, `pride.inspector.max.memory=2048` will give PRIDE Inspector 2G of memory. Please note that you will need to restart PRIDE Inspector in order for the change to take effect. It is also important to know that on a 32-bit operating system you can not increase this value beyond 2000. 
+ 
+[#PRIDE_Inspector Go to top of page]
+
+----
+
+===Support===
+If you have questions or need additional help, please contact the PRIDE Helpdesk at the EBI: *pride-helpdesk at ebi.ac.uk* (replace at with @). To help us better identify the problem, you can also include a (preferably zipped) copy of the `pride-inspector.log` from the `log` folder. 
+
+[#PRIDE_Inspector Go to top of page]
+
+----
+
+===Source Code===
+The source code can be viewed and downloaded from [http://code.google.com/p/pride-inspector/source/checkout here]
+
+[#PRIDE_Inspector Go to top of page]
+
+----
+
+===Screenshots===
+(Click on a screenshot to see the full size version)
