--- a/wiki/TableOfContents.wiki
+++ b/wiki/TableOfContents.wiki
@@ -1,9 +1,6 @@
   * [Welcome ↑ Home]
-  * [Articles HOWTO articles]
-    * [ArticlesXSS Web security]
-    * [ArticlesDom DOM manipulation]
-    * [ArticlesStyle CSS and style]
-    * [ArticlesTips Tips and tricks]
-  * [DOMReference DOM reference]
-  * [HTMLElements HTML reference]
-  * [CSSReference CSS reference]
+  * [PRIDEInspector PRIDE Inspector]
+  * [PRIDEmzGraphBrowser PRIDE mzGraph Browser]
+  * [PRIDEJAXB PRIDE JAXB]
+  * [PRIDEChart PRIDE Chart]
+  * [jmzML jmzML]
