Edited wiki page TableOfContents through web user interface.

--- a/wiki/TableOfContents.wiki
+++ b/wiki/TableOfContents.wiki
@@ -1,5 +1,6 @@
   * [Welcome ↑ Home]
   * [PRIDEInspector PRIDE Inspector]
+    * [PRIDEInspector#News PRIDE Inspector]
   * [PRIDEmzGraphBrowser PRIDE mzGraph Browser]
   * [PRIDEJAXB PRIDE JAXB]
   * [PRIDEChart PRIDE Chart]
