Edited wiki page TableOfContents through web user interface.

--- a/wiki/TableOfContents.wiki
+++ b/wiki/TableOfContents.wiki
@@ -1,6 +1,10 @@
   * [Welcome ↑ Home]
   * [PRIDEInspector PRIDE Inspector]
-    * [PRIDEInspector#News PRIDE Inspector]
+    * [PRIDEInspector#News News]
+    * [PRIDEInspector#Supported_Data_Formats Supported Data Formats]
+    * [PRIDEInspector#Download_and_Installation Download and Installation]
+    * [PRIDEInspector#Source_Code Source Code]
+    * [PRIDEInspector#Screenshots Screenshots]
   * [PRIDEmzGraphBrowser PRIDE mzGraph Browser]
   * [PRIDEJAXB PRIDE JAXB]
   * [PRIDEChart PRIDE Chart]
