Edited wiki page TableOfContents through web user interface.

--- a/wiki/TableOfContents.wiki
+++ b/wiki/TableOfContents.wiki
@@ -9,4 +9,4 @@
   * [PRIDEJAXB PRIDE JAXB]
   * [PRIDEChart PRIDE Chart]
   * [jmzML jmzML]
-  * [SupportAndFeedback Support and Feedback]
+  * [SupportAndFeedback *Support and Feedback*]
