--- a/wiki/SupportAndFeedback.wiki
+++ b/wiki/SupportAndFeedback.wiki
@@ -1,6 +1,6 @@
 #summary Please send your questions or feedbacks to PRIDE Help Desk.
 #sidebar TableOfContents
 
-Contact PRIDE Help Desk if you have questions related PRIDE Tool Suite, please also send us your feedback, including error reports, improvement suggestions, new feature requests and any other things you might want to suggest to the PRIDE team. 
+Contact us if you have questions related PRIDE Tool Suite, please also send us your feedback, including error reports, improvement suggestions, new feature requests and any other things you might want to suggest to the PRIDE team. 
 
  * PRIDE Help Desk: *[mailto:pride-helpdesk@ebi.ac.uk, pride-helpdesk@ebi.ac.uk]*
