--- a/wiki/PRIDEInspector.wiki
+++ b/wiki/PRIDEInspector.wiki
@@ -3,9 +3,8 @@
 
  * [#Introduction Introduction]
  * [#Supported_Data_Formats  Supported Data Formats]
- * [#Download_and_Installation Download and Installation]
-  * [#Installation_Requirements Installation Requirements]
-  * [#Download Download]
+ * [#Installation_Requirements Installation Requirements]
+ * [#Download Download]
  * [#Troubleshooting Troubleshooting]
  * [#Support Support]
  * [#Source_Code Source Code]
@@ -31,9 +30,7 @@ PRIDE Inpsector can load mass spectrometery dataset in either *mzML* or *PRIDE X
 
 ----
 
-===Download and Installation===
-
-====Installation Requirements====
+===Installation Requirements===
   * *Java*: *PRIDE Inspector* requires Java JRE 1.6(or above), which you can download for free [http://java.sun.com/javase/downloads/index.jsp here]. (Note: most computers should have Java installed already).
   * *Operating System*: The current verion has been tested on Windows 7, Windows Vista, Linux and Max OS X, it should also work on other platforms. If you come across any problems on your platform, please let us know.
   * *Memory*: MS dataset can be very large sometimes, in order to get good performence from PRIDE Inspector, we recommend you to have 1G of free memory.  
@@ -42,7 +39,7 @@ PRIDE Inpsector can load mass spectrometery dataset in either *mzML* or *PRIDE X
 
 ----
 
-====Download====
+===Download===
 You can get the latest *PRIDE Inspector* from our [http://code.google.com/p/pride-toolsuite/downloads/list Download Section], and download `pride-inspector-X.Y.zip` (where X and Y represent the version of the software). Unzipping the file, creates the following directory structure:
 {{{
   pride-inspector-X.Y
