Edited wiki page TableOfContents through web user interface.

--- a/wiki/TableOfContents.wiki
+++ b/wiki/TableOfContents.wiki
@@ -1,8 +1,9 @@
   * [Welcome ↑ Home]
   * [PRIDEInspector PRIDE Inspector]
-    * [PRIDEInspector#Introduction Introduction]
+    * [PRIDEInspector#Features Features]
     * [PRIDEInspector#Supported_Data_Formats Supported Data Formats]
-    * [PRIDEInspector#Download_and_Installation Download and Installation]
+    * [PRIDEInspector#Installation_Requirements Installation Requirements]
+    * [PRIDEInspector#Download Download]
     * [PRIDEInspector#Troubleshooting Troubleshooting]
     * [PRIDEInspector#Source_Code Source Code]
     * [PRIDEInspector#Screenshots Screenshots]
