--- a/wiki/PRIDEInspector.wiki
+++ b/wiki/PRIDEInspector.wiki
@@ -11,7 +11,7 @@
  * [#Screenshots Screenshots]
 
 ----
-===Features===
+==Features==
 The key features include:
   * Fast loading of *mzML* and *PRIDE XML* files.
   * Direct access to all PRIDE public database experiments.
@@ -23,7 +23,7 @@ The key features include:
 [#PRIDE_Inspector top of page]
 ----
 
-===Supported Data Formats===
+==Supported Data Formats==
 PRIDE Inpsector can load mass spectrometery dataset in:
  * *mzML*
  * *PRIDE XML* 
@@ -34,7 +34,7 @@ PRIDE Inpsector can load mass spectrometery dataset in:
 
 ----
 
-===Installation Requirements===
+==Installation Requirements==
   * *Java*: *PRIDE Inspector* requires Java JRE 1.6(or above), which you can download for free [http://java.sun.com/javase/downloads/index.jsp here]. (Note: most computers should have Java installed already).
   * *Operating System*: The current verion has been tested on Windows 7, Windows Vista, Linux and Max OS X, it should also work on other platforms. If you come across any problems on your platform, please let us know.
   * *Memory*: MS dataset can be very large sometimes, in order to get good performence from PRIDE Inspector, we recommend you to have 1G of free memory.  
@@ -43,7 +43,7 @@ PRIDE Inpsector can load mass spectrometery dataset in:
 
 ----
 
-===Download===
+==Download==
 You can get the latest *PRIDE Inspector* from our [http://code.google.com/p/pride-toolsuite/downloads/list Download Section], and download `pride-inspector-X.Y.zip` (where X and Y represent the version of the software). Unzipping the file, creates the following directory structure:
 {{{
   pride-inspector-X.Y
@@ -62,26 +62,26 @@ The zip file contains also an `examples` folder with 2 sample files: one in mzML
 
 ----
 
-===Troubleshooting===
+==Troubleshooting==
   # *Memory Issue*: Although PRIDE Inspector is design to handle large datasets with small memory footprint, it can still run out of memory if many files or public experiments are opened at the same time. If you have seen such a warning message in a popup window, you should try to increase the memory allocation for the program.This can be done by editing the `config.props` file, this file is located in the `config` folder of the installation directory. In the file, change the `pride.inspector.max.memory=1024` to a higher number, for instance, `pride.inspector.max.memory=2048` will give PRIDE Inspector 2G of memory. Please note that you will need to restart PRIDE Inspector in order for the change to take effect. It is also important to know that on a 32-bit operating system you can not increase this value beyond 2000. 
  
 [#PRIDE_Inspector top of page]
 
 ----
 
-===Support===
+==Support==
 If you have questions or need additional help, please contact the PRIDE Helpdesk at the EBI: *pride-helpdesk at ebi.ac.uk* (replace at with @). To help us better identify the problem, you can also include a (preferably zipped) copy of the `pride-inspector.log` from the `log` folder. 
 
 [#PRIDE_Inspector top of page]
 
 ----
 
-===Source Code===
+==Source Code==
 The source code can be viewed and downloaded from [http://code.google.com/p/pride-toolsuite/source/checkout here]
 
 [#PRIDE_Inspector top of page]
 
 ----
 
-===Screenshots===
+==Screenshots==
 (Click on a screenshot to see the full size version)
