--- a/wiki/PRIDEInspector.wiki
+++ b/wiki/PRIDEInspector.wiki
@@ -35,8 +35,8 @@ PRIDE Inpsector can load mass spectrometery dataset in:
 ----
 
 ==Installation Requirements==
-  * *Java*: *PRIDE Inspector* requires Java JRE 1.6(or above), which you can download for free [http://java.sun.com/javase/downloads/index.jsp here]. (Note: most computers should have Java installed already).
-  * *Operating System*: The current verion has been tested on Windows 7, Windows Vista, Linux and Max OS X, it should also work on other platforms. If you come across any problems on your platform, please let us know.
+  * *Java*: Java JRE 1.6(or above), which you can download for free [http://java.sun.com/javase/downloads/index.jsp here]. (Note: most computers should have Java installed already).
+  * *Operating System*: The current verion has been tested on Windows 7, Windows Vista, Linux and Max OS X, it should also work on other platforms. If you come across any problems on your platform, please contact the PRIDE Help Desk.
   * *Memory*: MS dataset can be very large sometimes, in order to get good performence from PRIDE Inspector, we recommend you to have 1G of free memory.  
 
 [#PRIDE_Inspector top of page]
