Edited wiki page TableOfContents through web user interface.

--- a/wiki/TableOfContents.wiki
+++ b/wiki/TableOfContents.wiki
@@ -8,7 +8,7 @@
     * [PRIDEInspector#Source_Code Source Code]
     * [PRIDEInspector#Screenshots Screenshots]
   * [PRIDEmzGraphBrowser PRIDE mzGraph Browser]
-  * [PRIDEJAXB PRIDE JAXB]
-  * [PRIDEChart PRIDE Chart]
+  * [PRIDEXMLJAXB PRIDE XML JAXB]
+  * [PRIDEQualityChart PRIDE Quality Chart]
   * [PRIDEUtilities PRIDE Utilities]
   * [jmzML jmzML]
