--- a/wiki/Welcome.wiki
+++ b/wiki/Welcome.wiki
@@ -1,14 +1,12 @@
 #summary Welcome to PRIDE Tool Suite. Written for proteomics community, by the PRIDE Team.
 #sidebar TableOfContents
 
-== Introduction ==
+*PRIDE Tool Suite* comprises of a following tools and libraries:
+ * [PRIDEInspector PRIDE Inspector]
+ * [PRIDEmzGraphBrowser PRIDE mzGraph Browser]
+ * [PRIDEQualityChart PRIDE Quality Chart]
+ * [PRIDEXMLJAXB PRIDE XML JAXB]
+ * [jmzML jmzML]
+ * [PRIDEUtilities PRIDE Utilities]
 
-Add your content here.
-
-
-= Details =
-
-Add your content here.  Format your content with:
-  * Text in *bold* or _italic_
-  * Headings, paragraphs, and lists
-  * Automatic links to other wiki pages
+== News ==
