--- a/wiki/PRIDEInspector.wiki
+++ b/wiki/PRIDEInspector.wiki
@@ -2,9 +2,10 @@
 #sidebar TableOfContents
 
  * [#Features Features]
- * [#Supported_Data_Formats  Supported Data Formats]
- * [#Installation_Requirements Installation Requirements]
- * [#Download Download]
+ * [#Data_Formats  Data Formats]
+ * [#Getting_PRIDE_Inspector Getting PRIDE Inspector]
+  * [#Installation_Requirements Installation Requirements]
+  * [#Download Download]
  * [#FAQs FAQs]
  * [#Support Support]
  * [#Source_Code Source Code]
@@ -23,7 +24,7 @@ The key features include:
 [#PRIDE_Inspector top of page]
 ----
 
-==Supported Data Formats==
+==Data Formats==
 PRIDE Inpsector can load mass spectrometery dataset in:
  * *mzML*
  * *PRIDE XML* 
@@ -34,7 +35,9 @@ PRIDE Inpsector can load mass spectrometery dataset in:
 
 ----
 
-==Installation Requirements==
+==Getting PRIDE Inspector==
+
+===Installation Requirements==
   * *Java*: Java JRE 1.6(or above), which you can download for free [http://java.sun.com/javase/downloads/index.jsp here]. (Note: most computers should have Java installed already).
   * *Operating System*: The current verion has been tested on Windows 7, Windows Vista, Linux and Max OS X, it should also work on other platforms. If you come across any problems on your platform, please contact the PRIDE Help Desk.
   * *Memory*: MS dataset can be very large sometimes, in order to get good performence from PRIDE Inspector, we recommend you to have 1G of free memory.  
@@ -43,7 +46,7 @@ PRIDE Inpsector can load mass spectrometery dataset in:
 
 ----
 
-==Download==
+===Download===
 You can get the latest *PRIDE Inspector* from our [http://code.google.com/p/pride-toolsuite/downloads/list Download Section], and download `pride-inspector-X.Y.zip` (where X and Y represent the version of the software). Unzipping the file, creates the following directory structure:
 {{{
   pride-inspector-X.Y
