Edited wiki page TableOfContents through web user interface.

--- a/wiki/TableOfContents.wiki
+++ b/wiki/TableOfContents.wiki
@@ -2,8 +2,9 @@
   * [PRIDEInspector PRIDE Inspector]
     * [PRIDEInspector#Features Features]
     * [PRIDEInspector#Supported_Data_Formats Supported Data Formats]
-    * [PRIDEInspector#Installation_Requirements Installation Requirements]
-    * [PRIDEInspector#Download Download]
+    * [PRIDEInspector#Getting_PRIDE_Inspector Getting PRIDE Inspector]
+     * [PRIDEInspector#Installation_Requirements Installation Requirements]
+     * [PRIDEInspector#Download Download]
     * [PRIDEInspector#FAQs FAQs]
     * [PRIDEInspector#Source_Code Source Code]
     * [PRIDEInspector#Screenshots Screenshots]
