Edited wiki page PRIDEmzGraphBrowser through web user interface.

--- a/wiki/PRIDEmzGraphBrowser.wiki
+++ b/wiki/PRIDEmzGraphBrowser.wiki
@@ -9,14 +9,19 @@
 
 == About the Library ==
 
-Add your content here.
+[#PRIDEmzGraphBrowser top of page]
+----
 
 == Getting the Library ==
 
+----
 == Using the Library ==
 
+----
 == API Reference ==
 
+----
 == FAQs ==
 
+----
 == Screenshots ==
