Edited wiki page PRIDEmzGraphBrowser through web user interface.

--- a/wiki/PRIDEmzGraphBrowser.wiki
+++ b/wiki/PRIDEmzGraphBrowser.wiki
@@ -9,7 +9,7 @@
 
 == About the Library ==
 
-[#PRIDEmzGraphBrowser top of page]
+[PRIDEmzGraphBrowser top of page]
 ----
 
 == Getting the Library ==
