--- a/wiki/PRIDEInspector.wiki
+++ b/wiki/PRIDEInspector.wiki
@@ -26,7 +26,7 @@ The data formats supported by PRIDE Inspector are:
 
 *Note*: We do have plan to support additional formats in the near future.
 
-[#PRIDE_Inspector top of page]
+[PRIDEInspector top of page]
 
 ----
 
@@ -37,7 +37,7 @@ The data formats supported by PRIDE Inspector are:
   * *Operating System*: The current verion has been tested on Windows 7, Windows Vista, Linux and Max OS X, it should also work on other platforms. If you come across any problems on your platform, please contact the PRIDE Help Desk.
   * *Memory*: MS dataset can be very large sometimes, in order to get good performence from PRIDE Inspector, we recommend you to have 1G of free memory.  
 
-[#PRIDE_Inspector top of page]
+[PRIDEInspector top of page]
 
 ----
 
@@ -56,7 +56,7 @@ If this fails, try to download and install Java 1.5 or above, as explained in th
 
 The zip file contains also an `examples` folder with 2 sample files: one in mzML format (`mzml-example.mzML`) and the other in PRIDE xml format (`pride-example.xml`) so you can upload them in pride inspector and try the application. There is and additional folder, `config`, that contains a file called `config.props` where you can modify the amount of memory assigned to your application (only change if you are trying to view files and is causing the software crash because of a "Out of memory..." exception). The additional 2 directories, `lib` and `log`, contain all the java libraries necessary for the application to run and some debugging information if the application crashes.
 
-[#PRIDE_Inspector top of page]
+[PRIDEInspector top of page]
 
 ----
 
@@ -64,23 +64,24 @@ The zip file contains also an `examples` folder with 2 sample files: one in mzML
   # *What to do if PRIDE Inspector runs out of memory?* 
   Although PRIDE Inspector is design to handle large datasets with small memory footprint, it can still run out of memory if many files or public experiments are opened at the same time. If you have seen such a warning message in a popup window, you should try to increase the memory allocation for the program.This can be done by editing the `config.props` file, this file is located in the `config` folder of the installation directory. In the file, change the `pride.inspector.max.memory=1024` to a higher number, for instance, `pride.inspector.max.memory=2048` will give PRIDE Inspector 2G of memory. Please note that you will need to restart PRIDE Inspector in order for the change to take effect. It is also important to know that on a 32-bit operating system you can not increase this value beyond 2000. 
  
-[#PRIDE_Inspector top of page]
+[PRIDEInspector top of page]
 
 ----
 
 ==Getting Help==
 If you have questions or need additional help, please contact the PRIDE Helpdesk at the EBI: *pride-helpdesk at ebi.ac.uk* (replace at with @). To help us better identify the problem, you can also include a (preferably zipped) copy of the `pride-inspector.log` from the `log` folder. 
 
-[#PRIDE_Inspector top of page]
+[PRIDEInspector top of page]
 
 ----
 
 ==Source Code==
 The source code can be viewed and downloaded from [http://code.google.com/p/pride-toolsuite/source/checkout here]
 
-[#PRIDE_Inspector top of page]
+[PRIDEInspector top of page]
 
 ----
 
 ==Screenshots==
 (Click on a screenshot to see the full size version)
+[PRIDEInspector top of page]
