Edited wiki page PRIDEmzGraphBrowser through web user interface.

--- a/wiki/PRIDEmzGraphBrowser.wiki
+++ b/wiki/PRIDEmzGraphBrowser.wiki
@@ -19,7 +19,9 @@
  * Filtering on ion series. 
  * Filtering on annotation series
 
-This library is developed using Java, it uses extensively both jFreeChart and PRIDE utilities library. We believe that this library is both easy to learn and easy to extend. It can be of great use for developing computational proteomics tools.  
+We believe that this library is both easy to learn and easy to extend. It can be of great use for developing computational proteomics tools.
+
+This library is developed using Java, it uses both jFreeChart and PRIDE utilities library extensively.   
 
 [PRIDEmzGraphBrowser top of page]
 ----
