--- a/wiki/PRIDEXMLJAXB.wiki
+++ b/wiki/PRIDEXMLJAXB.wiki
@@ -1,14 +1,32 @@
 #summary One-sentence summary of this page.
 #sidebar TableOfContents
+ * [#About_the_Library About the Library]
+ * [#Getting_the_Library Getting the Library]
+ * [#Using_the_Library Using the Library]
+ * [#API_Reference API Reference]
+ * [#FAQs FAQs]
+ * [#Screenshots Screenshots]
 
-= Introduction =
+== About the Library ==
 
-Add your content here.
+[PRIDEmzGraphBrowser top of page]
+----
+== Getting the Library ==
 
+[PRIDEmzGraphBrowser top of page]
+----
+== Using the Library ==
 
-= Details =
+[PRIDEmzGraphBrowser top of page]
+----
+== API Reference ==
 
-Add your content here.  Format your content with:
-  * Text in *bold* or _italic_
-  * Headings, paragraphs, and lists
-  * Automatic links to other wiki pages
+[PRIDEmzGraphBrowser top of page]
+----
+== FAQs ==
+
+[PRIDEmzGraphBrowser top of page]
+----
+== Screenshots ==
+
+[PRIDEmzGraphBrowser top of page]
