--- a/wiki/PRIDEmzGraphBrowser.wiki
+++ b/wiki/PRIDEmzGraphBrowser.wiki
@@ -6,6 +6,7 @@
  * [#API_Reference API Reference]
  * [#FAQs FAQs]
  * [#Getting_Help Getting Help]
+ * [#Source_Code Source Code]
  * [#Screenshots Screenshots]
 
 == About mzGraph Browser ==
