--- a/wiki/PRIDEmzGraphBrowser.wiki
+++ b/wiki/PRIDEmzGraphBrowser.wiki
@@ -54,7 +54,9 @@ The zip file in the [http://code.google.com/p/pride-toolsuite/downloads/list dow
  </repository>
 }}}
 
-*Note*: you need to change the version number to the latest version. 
+*Note*: you need to change the version number to the latest version.
+
+For developers, the latest source code is available from our [#Source_Code SVN repository]. 
 
 [PRIDEmzGraphBrowser top of page]
 ----
@@ -71,6 +73,10 @@ The zip file in the [http://code.google.com/p/pride-toolsuite/downloads/list dow
 [PRIDEmzGraphBrowser top of page]
 ----
 == Getting Help ==
+
+[PRIDEmzGraphBrowser top of page]
+----
+== Source Code ==
 
 [PRIDEmzGraphBrowser top of page]
 ----
